src/css/layerjs.css
[data-lj-type='stage'], [lj-type='stage'] {
  overflow: hidden;
  position: relative;
}
[data-lj-type='frame'], [lj-type='frame'] {
  position: absolute;
  transform-origin: left top;
  -webkit-transform-origin: left top;
  top: 0px;
  left: 0px;
}
[data-lj-type='layer'], [lj-type='layer'] {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
}
.nativescroll[data-lj-type='layer'], .nativescroll[lj-type='layer'] {
  position: absolute;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  width: auto;
  width: initial;
  height: auto;
  height: initial;
  overflow: auto;
}
.nativescroll[data-lj-type='layer'] > div, .nativescroll[lj-type='layer'] > div {
  position: relative;
  top: 0px;
  left: 0px;
  right: 0px;
  overflow: hidden;
}

